[gd_scene load_steps=2 format=3 uid="uid://dbo6ismch44ng"]

[ext_resource type="Script" path="res://control.gd" id="1_meham"]

[node name="TextureIconTextList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_meham")
metadata/_edit_group_ = true

[node name="TemplateRTLFarm" type="RichTextLabel" parent="."]
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_right = 30.0
offset_bottom = 30.0
bbcode_enabled = true
text = "[img=30x30]res://images/farm.png[/img]"
fit_content = true

[node name="TemplateRTLHouse" type="RichTextLabel" parent="."]
visible = false
custom_minimum_size = Vector2(30, 30)
offset_right = 30.0
offset_bottom = 30.0
bbcode_enabled = true
text = "[img=30x30]res://images/house.png[/img]"
fit_content = true

[node name="TemplateRTLRoad" type="RichTextLabel" parent="."]
visible = false
custom_minimum_size = Vector2(30, 30)
offset_right = 30.0
offset_bottom = 30.0
bbcode_enabled = true
text = "[img=30x30]res://images/road.png[/img]"
fit_content = true

[node name="VBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 150)
layout_mode = 0
offset_right = 50.0
offset_bottom = 150.0

[node name="Control" type="Control" parent="VBox"]
layout_mode = 2
